# fpmain

./: README
CMake_of_FPM/: CMakeLists.txt
CMake_of_FPM/src/: bar.f90
FPM/: README  fpm.toml
FPM/app/: main.f90
FPM/src/: foo.f90
break_CMake_of_FPM/: @go  CMakeLists.txt  README
